@@ -287,9 +287,9 @@ public class CompressedEntryEditorTab extends EntryEditorTab {
 			FieldEditor ed = editors.get(field);
 			ed.setEnabled(true);
 			if (((Component) ed).hasFocus())
-				ed.setBackground(GUIGlobals.activeEditor);
+				ed.setActiveBackgroundColor();
 			else
-				ed.setBackground(GUIGlobals.validFieldBackground);
+				ed.setValidBackgroundColor();
 		}
 	}
 
